--- a/nikdoge_bot_settings.json
+++ b/nikdoge_bot_settings.json
@@ -1,4 +1,5 @@
 {
-    "DISCORD_TOKEN":"pootis tokin here",
-    "TELEGRAM_TOKEN":"pootis tokin here"
+    "DISCORD_TOKEN":"pootis token here",
+    "TELEGRAM_TOKEN":"pootis token here",
+    "FFMPEG_EXECUTABLE":"C:/Program Files/ffmpeg/bin/ffmpeg.exe"
 }
